# OiaFed

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CSV_OUTPUT_GUIDE.md  INTEGRATION_PROMPT.md  LAUNCHER_README.md  PROCESS_NETWORK_VALIDATION_REPORT.md  Publish.md  README.md  VALIDATION_REPORT.md  analyze_results.py  checkpoint_comprehensive_config.yaml  class_diagram.mmd  debug_registration.py  demo.py  demo_decorators.py  demo_network_transport.py  demo_process_simple.py  demo_process_transport.py  example_config_based_federation.py  example_dddr_federation.py  exp.md  generate_configs.py  install.sh  integration_summary_test.py  local_mnist_claude.py  local_mnist_gpt5.py  local_mnist_kimi.py  main.py  mermaid.py  multi_client_demo.py  multi_client_evaluation_test.py  new_evaluate_learner.py  object_oriented_workflows.py  prompt.md  pyproject.toml  pytest.ini  quick_test_dataset.py  run.py  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
checkpoints/demo/: checkpoint_round_2.pt
config/: batch_clients_config.yaml  batch_clients_example.yaml  client_config.yaml  client_json_example.json  ldm_dddr.yaml  memory_demo_config.yaml  process_demo_config.yaml  server_config.yaml  server_json_example.json
config_examples/: evaluation_config_example.yaml  evaluation_mapping_solution.yaml  simple_evaluation_config.yaml
configs/: README_inheritance.md  communication.yaml  communication_manager.yaml  data_processing.yaml  dataset_manager_example.yaml  federation.yaml  hook_execution.yaml  hooks_example.yaml  security.yaml  server_demo.yaml  task_generation.yaml  training.yaml
configs/base/: mnist_base.yaml
configs/cifar10/: fedavg_iid.yaml  fedavg_iid_test.yaml
configs/clients/: client_demo_1.yaml  client_demo_2.yaml  client_demo_3.yaml
configs/datasets/: mnist.yaml
configs/distributed/: logging.yaml
configs/examples/: unified_logging_example.yaml
configs/experiments/: fedavg_mnist.yaml  mnist_iid.yaml  mnist_long_training.yaml  mnist_minimal.yaml  mnist_non_iid.yaml
configs/logging/: client_example.yaml  logging.yaml  server_example.yaml
configs/mnist_fedavg/: base.yaml  base.yaml.bak  learner_0.yaml  learner_1.yaml  learner_2.yaml  learner_3.yaml  learner_4.yaml  trainer.yaml
configs/mnist_parallel/: base.yaml  learner_0.yaml  learner_0.yaml.bak  learner_1.yaml  learner_2.yaml  learner_3.yaml
configs/models/: simple_cnn.yaml
demo_configs/: client_1_config.yaml  client_2_config.yaml  client_3_config.yaml  server_config.yaml
docs/: API参考文档.md  AUTO_REGISTRATION.md  CLIENT_INDEX_AUTO_ASSIGNMENT.md  COMMUNICATION_ARCHITECTURE_ANALYSIS.md  CONFIG_INHERITANCE_GUIDE.md  DDDR使用指南.md  DDDR实现说明.md  DatasetManager使用指南.md  Debug_Tools_User_Guide.md  FedCL使用手册.md  FedCL详细实现规划.md  Hook系统实现总结.md  Learner代理架构设计.md  MLFLOW_INTEGRATION.md  MOE-FedCL联邦通信系统架构设计.md  Network模式跨机器测试指南.md  README.md  README_文档索引.md  TABLE3_REPRODUCTION_GUIDE.md  TrainingEngine实现总结.md  ai-guide.md  prompt.md  层次通信机制设计.md  快速入门指南.md  数据集加载机制分析.md  新架构使用指南.md  日志系统改进总结.md  架构层次清理.md  架构设计说明.md  测试方案.md  目录结构.md  第一阶段重构总结.md  第二阶段重构完成总结.md  第二阶段重构测试验证报告.md  精简重构计划.md  统一入口使用指南.md  联邦学习核心组件实现总结.md  装饰器注册系统使用指南.md  装饰器系统集成方案.md  评估日志改进总结.md  (+12 more)
examples/: README.md  builder_usage_demo.py  client_manager_demo.py  communication_example.py  complete_mnist_demo.py  complete_new_architecture_demo.py  config_driven_demo.py  config_usage_demo.py  corrected_architecture_demo.py  dataset_manager_example.py  dataset_model_demo.py  demo_auto_experiment_recording.py  demo_batch_experiments.py  demo_unified_logging.py  experiment_tracker.py  fedavg_mnist_trainer.py  federation_example.py  gpu_monitor.py  hook_executor_example.py  hooks_example.py  improved_logging_demo.py  minimal_memory_demo.py  mnist_federation_demo.py  mnist_learner.py  mnist_process_demo.py  network_client.py  network_client_standalone.py  network_server.py  network_server_standalone.py  new_architecture_demo.py  new_three_layer_architecture_demo.py  quick_mnist_demo.py  refactored_architecture_demo.py  refactored_server_demo.py  reproduce_table3_experiments.py  run_batch_experiments.py  run_batch_experiments_mlflow.py  run_federated_learning.py  run_fl_direct.py  run_flexible.py  (+21 more)
experiments/: __init__.py  collect_results.py  run_experiment.py  sacred_callbacks.py  sacred_wrapper.py  table3_results.csv  test_csv_output.csv  test_csv_output_report.md
fedcl/: __init__.py  exceptions.py  federated_learning.py  federated_learning_old_backup.py  types.py
scripts/: start_client.sh
src/: README.md  __init__.py  cli.py  config.py.bak  runner.py
workflows/: ci.yml  publish.yml
(+1370 files in other folders)
