[project]
name = "moe-fedcl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "diffusers>=0.34.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "pytest-html>=4.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest-asyncio>=1.1.0",
]
